--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         </nav>
  
 
-   
+    <div class="container">
+        <div class="left">
+            <h2>Welcome to</h2>
+            <h1 > Nebula Nexus</h1>
+            <h1>Innovations</h1>
+            <p>"Welcome  to our educational hub,where we believe in a hands-on approach to learning.Our programs go beyond theory,focusing on practical knowledge that prepares students for real-world challenges.Immerse yourself in an educational experience that empowers you with the skills needed to thrive in today 's dynamic industries".</p>
+            <button class="btn"  > <a href="#">About Us</a></button>
+        </div>
+     <div class="right">
+        <img src="./student image.jpg" alt="">
+
+     </div>
+    </div>
 </body>
 </html>
